# inspector-cli

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 116362be804a_initial_migration.py
src/: config.py  interactive.py  main.py  mcp_server.py
src/db/: connection.py  models.py
src/services/: __init__.py  agent.py  cache_service.py  index_service.py  pdf_service.py
