[project]
name = "inspector-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Rishbh Arora",email = "vsryarora6879@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "envparse (>=0.2.0,<0.3.0)",
    "rich (>=13.0.0,<14.0.0)",
    "llama-index (>=0.12.0,<1.0.0)",
    "llama-index-vector-stores-postgres (>=0.3.0,<1.0.0)",
    "llama-index-embeddings-openai (>=0.3.0,<1.0.0)",
    "llama-index-llms-openai (>=0.3.0,<1.0.0)",
    "llama-index-core (>=0.14.12,<0.15.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "mcp (>=1.25.0,<2.0.0)",
    "pymupdf (>=1.24.0,<2.0.0)",
    "openai (>=1.0.0,<2.0.0)",
]
[tool.poetry]
packages = [
    { include = "src", from = "." }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
inspector = "src.main:main"
inspector-mcp = "src.mcp_server:run_server"